# AMAZON-Clone

./: Cargo.toml  README.md
backend/: .env  Cargo.toml
backend/migrations/2022-02-24-114616_create_product/: up.sql
backend/migrations/2022-03-06-071530_add_description_to_products/: down.sql
backend/src/: db.rs  lib.rs  schema.rs  server.rs
backend/src/handlers/: payment.rs  product.rs
backend/src/models/: product.rs
frontend/: .env  Cargo.toml  index.html
frontend/src/: app.rs  main.rs  state_provider.rs  types.rs
frontend/src/components/: button.rs  card_component.rs  checkout_product.rs  footer.rs  header.rs  login.rs  mod.rs  product.rs  state_provider.rs  subtotal.rs
frontend/src/error/: error.rs  mod.rs
frontend/src/hooks/: cart_state.rs  mod.rs  user_state.rs
frontend/src/route/: checkout.rs  checkout_page.rs  home.rs  mod.rs  order.rs  paymentpage.rs  prime.rs  register_user.rs  signin.rs
frontend/src/services/: auth.rs  fetch.rs  firebase.rs  mod.rs  payment_services.rs  user_request.rs
frontend/src/styles/: app.css
frontend/src/styles/components/: checkout_product.css  footer.css  header.css  product.css  subtotal.css
frontend/src/styles/pages/: checkout.css  home.css  login.css  payment.css
inventory/: .env  Cargo.toml
inventory/migrations/2022-03-06-071740_add_typesearch_column_to_products/: down.sql  up.sql
inventory/migrations/2022-03-09-134654_add_rank_to_products/: down.sql  up.sql
inventory/migrations/2022-03-09-134701_add_rank_index/: down.sql  up.sql
inventory/migrations/2022-03-11-130421_user_information/: up.sql
inventory/migrations/2022-03-11-130735_add_user_to_products/: up.sql
inventory/migrations/2022-03-11-220648_users/: down.sql  up.sql
inventory/migrations/2022-03-11-225232_add_user_to_products/: up.sql
inventory/migrations/2022-03-11-232102_add_prices_to_products/: down.sql  up.sql
inventory/migrations/2022-03-12-232057_add_sales/: down.sql  up.sql
inventory/migrations/2022-03-16-075859_add_bill_number_to_sales/: up.sql
inventory/src/: db.rs  error.rs  lib.rs  main.rs  schema.rs  server.rs  types.rs
inventory/src/graph_ql/: graphql_schema.rs  index.rs  resolver.rs
inventory/src/graph_ql/price/: mod.rs  price_index.rs  price_resolvers.rs  price_types.rs
inventory/src/graph_ql/products/: product_types.rs
inventory/src/graph_ql/sale/: mod.rs
inventory/src/graphql/: graphql_schema.rs  index.rs  mod.rs
inventory/src/graphql_modules/: graphql_schema.rs  index.rs  mod.rs  mutation.rs  query.rs
inventory/src/graphql_modules/price/: mod.rs  price_resolvers.rs  price_schema.rs  price_types.rs
inventory/src/graphql_modules/products/: mod.rs  product_index.rs  product_resolver.rs  product_schema.rs  product_types.rs
inventory/src/graphql_modules/sale/: mod.rs  sale_resolver.rs  sale_schema.rs  sale_types.rs
inventory/src/graphql_schema/: graphql_schema.rs  index.rs  mod.rs  resolver.rs
inventory/src/graphql_schema/price/: mod.rs  price_index.rs  price_resolver.rs  price_types.rs
inventory/src/graphql_schema/products/: product_resolver.rs  product_types.rs
inventory/src/graphql_schema/sale/: mod.rs  sale_resolver.rs
inventory/src/handlers/: mod.rs  payment.rs  product.rs
inventory/src/models/: errors.rs  mod.rs  prices.rs  product.rs  product_sales.rs  sales.rs
product_catalog/: .gitignore  Cargo.toml
product_catalog/src/: main.rs
