[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = {version = "1.2", features = ["rt-multi-thread", "macros"] }
async-stripe = { version = "0.13", default-features = false, features = ["runtime-async-std-surf"] }
actix= "0.12.0"