[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.17.0", features = ["rt-multi-thread", "macros"] }
async-stripe = { version = "0.13", default-features = false, features = ["runtime-async-std-surf"] }
diesel = { version = "1.0.0", features = ["postgres", "uuid", "r2d2", "chrono"] }
dotenv = "0.15.0"
actix-web = "3.3.3"
actix-web-lab = "0.12.0"
actix-cors = "0.5.4"
juniper = "0.15"
env_logger = "0.9"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
failure = "0.1.8"
