[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.56"
wasm-bindgen = "0.2.79"
wasm-logger = "0.2.0"
yew = "0.19.0"
yew-router = "0.16.0"
yew_styles = "0.11.0"
yew-interop = {version = "0.3", features = ["script"]}
serde = {version="1.0", features=["derive"]}
anyhow = "1.0.32"
gloo-console= "0.2.1"
firebase-rs="2.0.1"
yew-hooks = "0.1.32"
parking_lot = "0.12.0"
lazy_static = "1.4.0"
gloo = "0.4.0"
dotenv = "0.15.0"
reqwest = { version = "0.11.7", features = ["json"] }
thiserror = "1.0.30"


[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "HtmlElement",
    "MouseEvent",
    "DomRect",
]
