[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.56"
wasm-bindgen = "0.2.79"
wasm-logger = "0.2.0"
yew = "0.19.0"
yew-router = "0.16.0"
yew-interop = {version = "0.3", features = ["script"]}
serde = "1"
anyhow = "1.0.32"
gloo-console= "0.2.1"
yew-hooks = "0.1.32"
parking_lot = "0.12.0"
lazy_static = "1.4.0"
gloo = "0.4.0"
dotenv_codegen = "0.15.0"
reqwest = { version = "0.11.7", features = ["json"] }
thiserror = "1.0.0"
log = "0.4.8"
chrono = { version = "0.4", features = ["serde"] }
wee_alloc = "0.4.5"
getrandom = { version = "0.2.5", features = ["js"] }



[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "HtmlElement",
    "MouseEvent",
    "DomRect",
]

[profile.release]
# Less code to include into binary
panic = 'abort'
# Optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# Optimization for size ( most aggressive )
opt-level = 'z'
# Link time optimization using using whole-program analysis
lto = true