[package]
name = "inventory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
actix-web-lab = "0.12.0"
actix-cors = "0.5.4"
async-stripe = { version = "0.13", default-features = false, features = ["runtime-async-std-surf"] }
diesel = { version = "1.0.0", features = ["postgres", "uuid", "r2d2", "chrono", "numeric"] }
bigdecimal = "0.0.14"
dotenv = "0.15.0"
juniper = "0.15.9"
env_logger = "0.9"
log = "0.4"
tokio = {version = "1.17.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
failure = "0.1.8"
diesel_full_text_search = { version = "1.2.1", git = "https://github.com/werner/diesel_full_text_search" }
elasticsearch = "7.14.0-alpha.1"
itertools = "0.10.3"
authentication = {path = "../authentication"}



# async-graphql = "3.0.34"
# async-graphql-actix-web = "3.0.34"